# new_admin_panel_sprint_2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
infra/: .env.example  admin_panel.conf  (+3 more)
movies_admin/: .dockerignore  Dockerfile  manage.py  pyproject.toml  start.sh  uwsgi.ini
movies_admin/config/: asgi.py  settings.py  urls.py
movies_admin/config/components/: application.py  database.py  internationalization.py  media.py  password_validation.py  security.py  static.py
movies_admin/movies/: __init__.py  admin.py  apps.py  tests.py  views.py
movies_admin/movies/api/: __init__.py  urls.py
movies_admin/movies/api/v1/: __init__.py  urls.py  views.py
movies_admin/movies/api/v1/docs/: movies API.postman_collection.json
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: __init__.py  add_file_path0002.py  initial0001.py
movies_admin/movies/models/: abstract_models.py  filmwork.py  genre.py  person.py  through_models.py
movies_admin/sqlite_to_postgres/: README.md  __init__.py  main.py
movies_admin/sqlite_to_postgres/core/: __init__.py  config.py
movies_admin/sqlite_to_postgres/data_classes/: __init__.py  mixins.py  table_classes.py
movies_admin/sqlite_to_postgres/db_connectors/: __init__.py  base.py  postgresql.py  sqlite3.py
movies_admin/sqlite_to_postgres/etl_operations/: operations.py
movies_admin/sqlite_to_postgres/transform_data/: __init__.py  schema_mapping.py  table_mapping.py  transform.py
movies_admin/uwsgi/: uwsgi.ini
(+6 files in other folders)
